Added test for OrderApplicationService